ProdIND/ProdPrograms/force-app/main/default/objects/Pennydrop_Validation__mdt/Pennydrop_Validation__mdt.object-meta.xml
<CustomObject>
    <label>Pennydrop Validation</label>
    <pluralLabel>Pennydrop Validations</pluralLabel>
</CustomObject>