ProdIND/ProdPrograms/force-app/main/default/objects/Pennydrop_Validation__mdt/fields/is_Allowed__c.field-meta.xml
<CustomField>
    <fullName>is_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Allowed</label>
    <type>Checkbox</type>
</CustomField>