ProdIND/ProdPrograms/force-app/main/default/objects/Pennydrop_Validation__mdt/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <label>Status Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>