ProdIND/ProdPrograms/force-app/main/default/objects/Pennydrop_Validation__mdt/fields/Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Status_Description__c</fullName>
    <label>Status Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>